external-projects/sui-prover/crates/sui-prover/tests/snapshots/quantifiers/sum_map.fail.move.snap
---
source: crates/sui-prover/tests/integration.rs
expression: output
---
exiting with verification errors
error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/sum_map.fail.move:24:5
   │
24 │     ensures(sum_map!<u64, u64>(&v, |x| x_plus_10(x)) == ELIDEDu64.to_int());
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/sum_map.fail.move:21: test_sum_map_fail

error: prover::ensures does not hold
   ┌─ tests/inputs/quantifiers/sum_map.fail.move:32:5
   │
32 │     ensures(sum_map_range!<u64, u64>(&v, 0, 2, |x| x_plus_10(x)) == ELIDEDu64.to_int());
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │
   =     at tests/inputs/quantifiers/sum_map.fail.move:29: test_sum_map_range_fail
